Add a following robot class, a FreeCAD macro, and a few corrections

--- a/doc/draft.ipynb
+++ b/doc/draft.ipynb
@@ -24,20 +24,18 @@
     "\n",
     "As i said, the Robot instance comes from the [pypot.vrep.from_vrep()](https://github.com/poppy-project/pypot/blob/master/pypot/vrep/__init__.py) function with the following parameter : \n",
     "* a base config file (the one which is in the creature's package's config directory)\n",
-    "* a vrep scene (if not specified, the one in the creature's package's vrep-scene directory)\n",
+    "* a vrep scene (if not specified, the one in the creature's package's vrep-scene directory) : don't forget to add a force and timer object.\n",
     "\n",
     "What exactly happen here with from_vrep ?\n",
     "1. a vrep_io (which inherits from pypot.io) instance is created, to communicate with vrep\n",
     "2. a vrep_controller (which inherits from MotorsController) instance is created to control the robot and sync the pypot model motors and the vrep motors\n",
     "3. a Robot instance is created \n",
-    "\n",
-    "There is a problem with my simple model below : we're expecting from the vrep controller to loop the update() method, but the vrep model move only if there's a manual update\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -46,35 +44,24 @@
     "import json\n",
     "import pypot.vrep\n",
     "\n",
-    "my_path = '/home/steven/luxo/model_1/'\n",
+    "my_path = '/home/steven/luxo/luxo_alpha/model_1/'\n",
     "\n",
     "#Don't forget to launch vrep\n",
     "pypot.vrep.close_all_connections()\n",
     "s_robot = pypot.vrep.from_vrep(config=my_path+'config_1.json', scene = my_path+'test_scene.ttt')\n",
-    "\n"
+    "#s_robot.start_simulation()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "s_robot.motor_1.goal_position = 20 \n",
-    "#Alone doesn't work, you need to update manually\n",
-    "s_robot._controllers[0].update()"
+    "s_robot.motor_1.goal_position = 10"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -93,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
