--- a/doc/draft.ipynb
+++ b/doc/draft.ipynb
@@ -35,11 +35,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-3:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.5/threading.py\", line 923, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python3.5/threading.py\", line 871, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/usr/lib/python3.5/site-packages/pypot/utils/stoppablethread.py\", line 119, in _wrapped_target\n",
+      "    self._target()\n",
+      "  File \"/usr/lib/python3.5/site-packages/pypot/utils/stoppablethread.py\", line 179, in run\n",
+      "    make_update_loop(self, self._update)\n",
+      "  File \"/usr/lib/python3.5/site-packages/pypot/utils/stoppablethread.py\", line 152, in make_update_loop\n",
+      "    update_func()\n",
+      "  File \"/usr/lib/python3.5/site-packages/pypot/vrep/controller.py\", line 49, in update\n",
+      "    rad2deg(self.io.get_motor_position(motor_name=m.name)), 1)\n",
+      "  File \"/usr/lib/python3.5/site-packages/pypot/vrep/io.py\", line 146, in get_motor_position\n",
+      "    streaming=True)\n",
+      "  File \"/usr/lib/python3.5/site-packages/pypot/vrep/io.py\", line 355, in call_remote_api\n",
+      "    raise VrepIOErrors(msg)\n",
+      "pypot.vrep.io.VrepIOErrors: Remote error\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import pypot.vrep\n",
@@ -48,19 +75,62 @@
     "\n",
     "#Don't forget to launch vrep\n",
     "pypot.vrep.close_all_connections()\n",
-    "s_robot = pypot.vrep.from_vrep(config=my_path+'config_1.json', scene = my_path+'test_scene.ttt')\n",
+    "s_robot = pypot.vrep.from_vrep(config=my_path+'config_1.json', scene = my_path+'scene_1.ttt')\n",
     "#s_robot.start_simulation()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "s_robot.motor_1.goal_position = 10"
+    "s_robot.motor_1.goal_position = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SystemError",
+     "evalue": "Parent module '' not loaded, cannot perform relative import",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mSystemError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-b513cbdd9d83>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpypot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvrep\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msrc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfollowingrobot\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mFollowingRobot\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mmy_path\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'/home/steven/luxo/luxo_alpha/model_1/'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mSystemError\u001b[0m: Parent module '' not loaded, cannot perform relative import"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import pypot.vrep\n",
+    "from ..src.followingrobot import FollowingRobot\n",
+    "\n",
+    "my_path = '/home/steven/luxo/luxo_alpha/model_1/'\n",
+    "pypot.vrep.close_all_connections()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pypot.dynamixel\n",
+    "ports = pypot.dynamixel.get_available_ports()\n",
+    "dxl_io = pypot.dynamixel.DxlIO(ports[0])\n",
+    "dxl_io.scan()\n",
+    "dxl_io.close()"
    ]
   }
  ],
